manifest/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <description>Represents an agreement in the system</description>
    <fields>
        <fullName>APTS_Account_has_SLAs__c</fullName>
        <description>Identified whether this contract contains SLAs</description>
        <label>Account has SLAs? (Chronic Care)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Add_as_Additional_Insured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Teladoc is required to add client as additional insured</description>
        <label>Add as Additional Insured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_AdditionalNonStandardAgreementDtls__c</fullName>
        <description>For non-standard requests, provide all additional information/details/pricing that you want the Contracts Team to include in the contract. If standard, enter “Standard” here.</description>
        <label>Agreement Request Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Channel__c</fullName>
        <label>Agreement Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Better Help</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Direct Employer</fullName>
                </value>
                <value>
                    <fullName>Health Plan/HSG</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Strat Partners</fullName>
                </value>
                <value>
                    <fullName>HHS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Effective_Date_Copy__c</fullName>
        <formula>Apttus__Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Effective Date Copy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Type__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Agreements</fullName>
                </value>
                <value>
                    <fullName>BAA StandAlone</fullName>
                </value>
                <value>
                    <fullName>Client Intake Form/CCS</fullName>
                </value>
                <value>
                    <fullName>Data Sharing Agreement</fullName>
                </value>
                <value>
                    <fullName>Employer Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Employer Service Agreement - Self Service PDF</fullName>
                </value>
                <value>
                    <fullName>Equipment Schedule</fullName>
                </value>
                <value>
                    <fullName>Health Plan Services Agreement</fullName>
                </value>
                <value>
                    <fullName>HHS Order Form Agreement</fullName>
                </value>
                <value>
                    <fullName>HHS Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Letter of Intent</fullName>
                </value>
                <value>
                    <fullName>Master Lease Agreement</fullName>
                </value>
                <value>
                    <fullName>Non Disclosure Agreement</fullName>
                </value>
                <value>
                    <fullName>Non Disclosure Agreement - Self Service PDF</fullName>
                </value>
                <value>
                    <fullName>Other forms</fullName>
                </value>
                <value>
                    <fullName>Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>Referral Agreement</fullName>
                </value>
                <value>
                    <fullName>Statement of Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Annual_Agreement_Value__c</fullName>
        <label>Annual Agreement Value</label>
        <summarizedField>Apttus__AgreementLineItem__c.APTS_Quote_Total_Price__c</summarizedField>
        <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Rejected flag</description>
        <inlineHelpText>Approval Rejected flag</inlineHelpText>
        <label>Approval Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ApprovedPerformanceGuarantee__c</fullName>
        <description>Indicates whether the agreement contains performance guarantees or SLAs</description>
        <label>Performance Guarantee(s)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Are_there_marketing_DOPS_requiremen__c</fullName>
        <description>Typically pertains to the Lapsed User Information - there will be a clause in the agreement if this is present. Most often used for 2500 lives or greater.</description>
        <label>Marketing &amp; DOPS requirements Met? (CC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_AssignedClientManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Client Manager at the time the contract was signed</description>
        <label>Assigned Client Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements_assigned_client_manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Audit_Comments__c</fullName>
        <description>Audit Comments</description>
        <label>InfoSec Audit Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BAAApplicable__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Indicate whether a BAA applies to this agreement</description>
        <label>BAA Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_BAABreachNoticeTimePeriod__c</fullName>
        <label>BAA Notice of Breach Req w/i Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BAAComments__c</fullName>
        <label>BAA Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BAADeidentificationAllowed__c</fullName>
        <defaultValue>&quot;Not Applicable&quot;</defaultValue>
        <label>BAA De-Identification Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Consent Required</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_BAADeidentifiedDataUsed__c</fullName>
        <defaultValue>&quot;Not Applicable&quot;</defaultValue>
        <label>BAA De-Identified Data Used for Any Purp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Consent Required</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_BAAGoverningLaw__c</fullName>
        <defaultValue>&quot;New York&quot;</defaultValue>
        <label>BAA Governing Law</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_BAALimitedDataSetAllowed__c</fullName>
        <defaultValue>&quot;Not Applicable&quot;</defaultValue>
        <label>BAA Creation of Limited Data Set Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes: Any Purpose</fullName>
                </value>
                <value>
                    <fullName>Yes: Restricted</fullName>
                </value>
                <value>
                    <fullName>Yes: Consent Required</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_BAARighttoCurePeriodDays__c</fullName>
        <defaultValue>&quot;Not Applicable&quot;</defaultValue>
        <label>BAA Right to Cure Period (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_BAASecIncdntNoticeTimePeriod__c</fullName>
        <label>BAA Notice of Sec. Incdnt Req w/i Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BAATerminationforBreachDays__c</fullName>
        <defaultValue>15</defaultValue>
        <label>BAA Notice for Term. for Breach (Days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_BAATerminationforMaterialBreach__c</fullName>
        <defaultValue>&quot;Not Applicable&quot;</defaultValue>
        <label>BAA Termination for Material Breach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes: Mutual</fullName>
                </value>
                <value>
                    <fullName>Yes: Client</fullName>
                </value>
                <value>
                    <fullName>Yes: Teladoc</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_BAAUnauthDiscNoticeTimePeriod__c</fullName>
        <label>BAA Notice of Unauth Disc Req w/i Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BAAUseOfPHIAllowedforResearch__c</fullName>
        <defaultValue>&quot;Not Applicable&quot;</defaultValue>
        <label>BAA Use/Disc of PHI Allowed for Research</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Consent Required</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_BAA_Governing_Law__c</fullName>
        <label>BAA Governing Law</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New York</fullName>
                    <default>true</default>
                    <label>New York</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_BAA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a BAA has been signed, checked the box</description>
        <label>BAA Signed? (Chronic Care)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Between_the_Parties_Cap__c</fullName>
        <description>Type of Claim - Between the Parties</description>
        <label>Between the Parties Cap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes: Mutual</fullName>
                </value>
                <value>
                    <fullName>Yes: TDH Only</fullName>
                </value>
                <value>
                    <fullName>Yes: Client Only</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Billing_Cadence__c</fullName>
        <label>Billing Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Billing_Method__c</fullName>
        <description>Type of agreement, talk to the CIM. Generally if its claims you would see CPT codes with the pricing in the contract</description>
        <label>Billing Method (Chronic Care)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Invoice through Enterprise/Client</fullName>
                </value>
                <value>
                    <fullName>Direct Invoice through Partner/Payer</fullName>
                </value>
                <value>
                    <fullName>Medical Claims TPA/ASO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Breach_Priv_Conf_Cap_Amount__c</fullName>
        <defaultValue>&quot;$5 million&quot;</defaultValue>
        <label>Breach of Priv./Confid. Cap Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Breach_Privacy_Confidentiality_Cap__c</fullName>
        <defaultValue>&quot;yes&quot;</defaultValue>
        <label>Breach of Priv./Confid. Cap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_BundledPricingDiscount__c</fullName>
        <description>If present, Found in Livongo Program and Fees Section under the Fees section</description>
        <label>Bundled Pricing Discount (Chronic Care)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ChangeInControlConsentReq__c</fullName>
        <label>Change in Control Consent Req</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ChronicCareReferralFeePercentage__c</fullName>
        <label>Chronic Care Referral Fee (%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Claims_by_a_3rd_Party_Cap_Amount__c</fullName>
        <defaultValue>&quot;$5 million&quot;</defaultValue>
        <description>Type of Claim - Indemnification</description>
        <label>Claims by a 3rd Party Cap Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Claims_by_a_3rd_Party_Cap__c</fullName>
        <defaultValue>&quot;$5 million&quot;</defaultValue>
        <description>Privacy/Confidentiality - Indirect Damages</description>
        <label>Claims by a 3rd Party Cap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes: Mutual</fullName>
                </value>
                <value>
                    <fullName>Yes: TDH Only</fullName>
                </value>
                <value>
                    <fullName>Yes: Client Only</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ClientSignatureComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check this box when you have a client-signed agreement document (after you attach the document to Files). The Contracts team will receive a notification.</description>
        <label>Client Signature Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Commencement_Type__c</fullName>
        <label>Commencement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D&amp;A</fullName>
                </value>
                <value>
                    <fullName>Ship Date</fullName>
                </value>
                <value>
                    <fullName>Delivery Date</fullName>
                </value>
                <value>
                    <fullName>Stated in Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_CompanyReturnedDate__c</fullName>
        <label>Company Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_CompanySignedBy__c</fullName>
        <description>Enter internal (TDH) signature information in the Company fields</description>
        <label>Company Signed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CompanySignedDate__c</fullName>
        <description>Date Teladoc signed the Agreement</description>
        <label>Company Signed Date (Chronic Care)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Company_Signed_By_Name__c</fullName>
        <formula>Apttus__Company_Signed_By__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Signed By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConfidentialInformationMustBeMarked__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Indicate whether confidential information must be marked to be considered confidential</description>
        <label>Confidential Information Must be Marked</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ConfidentialityComments__c</fullName>
        <label>Confidentiality Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_ContractManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements_contract_manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Effective_Date__c</fullName>
        <description>Date the program launches</description>
        <label>Contract Effective Date (Chronic Care)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Path__c</fullName>
        <formula>Text( Apttus__Related_Opportunity__r.L2O_Contract_Path__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Shared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Termination_Date__c</fullName>
        <description>Date the contract terminates</description>
        <label>Contract Termination Date (Chronic Care)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Type__c</fullName>
        <description>User enters in type of agreement</description>
        <label>Contract Type (Chronic Care)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>Program Agreement</fullName>
                </value>
                <value>
                    <fullName>Third Party Agreement</fullName>
                </value>
                <value>
                    <fullName>Client Confirmation Schedule</fullName>
                </value>
                <value>
                    <fullName>BAA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Contracting_Account__c</fullName>
        <formula>Apttus__Related_Opportunity__r.L2O_Contracting_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracting Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ContractsDataStage__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <label>Contracts Data Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Data to Review</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Data Capture Complete</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_CurrencyIsoCode__c</fullName>
        <defaultValue>&quot;USD&quot;</defaultValue>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>BYN</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>RON</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_CustomClientPricing__c</fullName>
        <label>Custom Client Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_CustomerSignedDate__c</fullName>
        <description>Date Customer signed the Agreement</description>
        <label>Customer Signed Date (Chronic Care)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Description__c</fullName>
        <label>Customer Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CyberRiskMinimum__c</fullName>
        <defaultValue>&quot;$10 million&quot;</defaultValue>
        <description>Teladoc&apos;s minimum cyber risk insurance requirement</description>
        <label>Cyber Risk Minimum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Days_Notice_for_Term_for_Convenienc__c</fullName>
        <description>Number of days the client must give prior to termination for convenience</description>
        <label>Days Notice for Term for Convenience CC</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Days_Notice_for_Termination__c</fullName>
        <description>Number of days the client must give prior to termination</description>
        <label>Days Notice for Termination (CC)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Delegated_Credentialing_Agreement__c</fullName>
        <label>Is there a delegated credentialing agree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Direct_Damages_Client_Cap__c</fullName>
        <description>Any numerical values should be written out in number form. (e.g. $5,000,000 or 2x)</description>
        <label>Direct Damages: Client Cap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>